@@ -73,8 +73,7 @@
  * Licence: ``BSD``
  * Versions:
 
-  * `0.9.2 <https://github.com/JNRowe/jnrowe-misc/blob/master/media-gfx/sphinxcontrib-blockdiag/sphinxcontrib-blockdiag-0.9.2.ebuild>`__  ``amd64``, ``x86``
-  * `1.0.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/media-gfx/sphinxcontrib-blockdiag/sphinxcontrib-blockdiag-1.0.1.ebuild>`__  ``amd64``, ``~x86`` (due 2012-01-20)
+  * `1.0.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/media-gfx/sphinxcontrib-blockdiag/sphinxcontrib-blockdiag-1.0.1.ebuild>`__  ``amd64``, ``x86``
 
 * ``sphinxcontrib-gruffygen`` - http://pypi.python.org/pypi/sphinxcontrib-gruffygen/
 
