@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST sphinxcontrib-blockdiag-0.9.2.tar.gz 6397 RMD160 324d75b3102656082ec3fa9fb424714f6349b74e SHA1 2661e1ad3c09c8c0e02930594780c1053c8a1302 SHA256 43e4e01bdf7b6767d7f818bf7b1296114d58cf56f3ab6bb303d0530b3e8d8b30
 DIST sphinxcontrib-blockdiag-1.0.1.tar.gz 5450 RMD160 c17ee1bade0da131260c4c68989dee4a8af82140 SHA1 23e9903375eeb73c4cfebf8bb1e635916d676996 SHA256 92dd164861582f75d615fdb08c357e003b13e10988b188bc0d8eaaa22eb592cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8ZmwoACgkQzJrj3cAXR0kQ2ACgvQAHM0ZFugjorVurNcasu/T1
-DNEAn0ZhVrTzUcfeuYFnI69ij8kkfqGu
-=Kdqe
+iEYEAREKAAYFAk8Z7mkACgkQzJrj3cAXR0lBTACgg5xUUrD6HHh2wZScwNEzLp56
+1iYAnRNeZYFxTxWtBzYFp7EHuB8ZOU1g
+=rRUy
 -----END PGP SIGNATURE-----
