@@ -3,10 +3,10 @@ DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/pytho
 DESCRIPTION=Sphinx extension to support media-gfx/blockdiag diagrams
 EAPI=3
 HOMEPAGE=http://pypi.python.org/pypi/sphinxcontrib-blockdiag/
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=BSD
 RDEPEND=dev-python/setuptools dev-python/sphinx >=media-gfx/blockdiag-1.1.0 >=app-admin/eselect-python-20091230 =dev-lang/python-2.7*
 SLOT=0
 SRC_URI=mirror://pypi/s/sphinxcontrib-blockdiag/sphinxcontrib-blockdiag-1.0.1.tar.gz
 _eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	d92f291efb4ef0595cb90e4b4e7e6b6c	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	portability	536c5e70c5fb252ed3b769e04aa3f05b	python	412a8596c4b1620189e299c8dd303d0a	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=a0ee7bb0e71014bf409fc44b65550365
+_md5_=49ed96a507563419a2e82230e9ee6336
