@@ -1,4 +1,3 @@
-REM 2012-01-20 *1 MSG %"Stabilise x86 media-gfx/sphinxcontrib-blockdiag-1.0.1%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 app-text/sphinxcontrib-httpdomain-1.1.6%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 dev-python/flake8-1.0%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 www-client/github-cli-1.0.0%" %a
