@@ -3,6 +3,10 @@
 # $Header: $
 
   20 Jan 2012; James Rowe <jnrowe@gmail.com>
+  -sphinxcontrib-blockdiag-0.9.2.ebuild, sphinxcontrib-blockdiag-1.0.1.ebuild:
+  Keyworded x86.
+
+  20 Jan 2012; James Rowe <jnrowe@gmail.com>
   sphinxcontrib-blockdiag-1.0.1.ebuild:
   Keyworded amd64.
 
